# cs-project

./: .gitignore  README.md  app.py  database.py  models.py  pyproject.toml  seed_training_data.py
docs/: ai_module.md
services/: __init__.py  ai_trainer.py  allocation_service.py  batch_service.py  course_service.py  department_service.py  preference_service.py  programme_service.py  recommendation_service.py  student_service.py  teacher_service.py
static/css/: roles.css  style.css
templates/: Department.html  add_batch.html  add_programme.html  admin_dashboard.html  administrator.html  ai_status.html  allocation_report.html  course.html  courses_list.html  department_dashboard.html  edit_course.html  edit_student.html  login.html  programme.html  roles.html  seat_matrix.html  student.html  student_academic.html  student_dashboard.html  students_list.html  support.html  teacher.html  teacher_dashboard.html
